WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285101
Fix boxedWasmCalleeLoadLocation assertion in WasmTable.cpp
https://bugs.webkit.org/show_bug.cgi?id=285101
Summary
Fix boxedWasmCalleeLoadLocation assertion in WasmTable.cpp
Angelos Oikonomopoulos
Reported
2024-12-23 08:08:55 PST
boxedWasmCalleeLoadLocation is no loncger initialized to nullptr, need to account for that.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-12-23 08:12:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38335
EWS
Comment 2
2024-12-23 10:07:04 PST
Committed
288249@main
(475611f8b6a6): <
https://commits.webkit.org/288249@main
> Reviewed commits have been landed. Closing PR #38335 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-23 10:08:12 PST
<
rdar://problem/141950028
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug