Fix boxedWasmCalleeLoadLocation assertion in WasmTable.cpp https://bugs.webkit.org/show_bug.cgi?id=285101

Reviewed by Yusuke Suzuki.

boxedWasmCalleeLoadLocation used to be initialized to nullptr, but
that's no longer the case. It's initialized to Wasm::NullWasmCallee
instead and we need to turn that into a variable so that it'll have a
stable address we can compare against.

* Source/JavaScriptCore/wasm/WasmFormat.cpp:
* Source/JavaScriptCore/wasm/WasmFormat.h:
* Source/JavaScriptCore/wasm/WasmTable.cpp:
(JSC::Wasm::FuncRefTable::setFunction):

Canonical link: https://commits.webkit.org/288249@main